  - rename SPVM::Builder::Config::add_extra_compiler_flags to append_extra_compiler_flags
  - add SPVM::Builder::Config::prepend_extra_compiler_flags
  - rename SPVM::Builder::Config::add_extra_linker_flags to append_extra_linker_flags
  - rename SPVM::Builder::Config::add_ccflags to append_ccflags
  - rename SPVM::Builder::Config::add_lddlflags to append_lddlflags
  
0.0706 2020-06-29
  - SPVM need manually initialization in Perl script because SPVM is not compiled some environment require, do, Mojo morbo, Mojo hypnotoad, mod_perl, etc
      UNITCHECK { SPVM::init() }
  - Increased Perl version requirement to 5.10.0 because UNITCHECK is needed for SPVM.
0.0705 2020-06-28
  - remove SPVM::Builder::quiet method
  - SPVM::Builder::Config quiet field default become 1
  - add get_lib_dirs to SPVM::Builder::Config
  - add set_lib_dirs to SPVM::Builder::Config
  - add add_lib_dirs to SPVM::Builder::Config
  - remove -L<lib_dir> from lddlflags and add to lib_dir field
  - lib_dir values is added before extra_linker_flags
  - rename SPVM::Builder::Config::add_include_dir to add_include_dirs
  - renmae SPVM::Builder::Config::add_lib_dir to add_lib_dirs
  - add_include_dirs become add arguments to first of elements.
  - SPVM::Builder::Config::add_lib_dirs become add arguments to first of elements.
  - SPVM::Builder::Config::add_libs become add arguments to first of elements.
  - rename  SPVM::Builder::Config::add_libs to use_lib, and library is added after last element

0.0704 2020-06-26
  - rename SPVM::Builder::Config::set_no_cache to set_force_compile
  - rename SPVM::Builder::Config::get_no_cache to get_force_compile
  - add native source dependency cache system
0.0703 2020-06-24
  - fixed broken test by using different perl version
0.0702 2020-06-24
  - add document of SPVM::Builder::Config::add_extra_compiler_flags
  - add document of SPVM::Builder::Config::add_extra_linker_flags
  - add document of SPVM::Builder::Config::set_extra_compiler_flags