@@ -10,6 +10,9 @@
   - rename SPVM::Builder::Config::add_extra_linker_flags to append_extra_linker_flags
   - rename SPVM::Builder::Config::add_ccflags to append_ccflags
   - rename SPVM::Builder::Config::add_lddlflags to append_lddlflags
+  - add SPVM::Builder::Config::prepend_extra_linker_flags
+  - add SPVM::Builder::Config::prepend_ccflags
+  - add SPVM::Builder::Config::prepend_lddlflags
   
 0.0706 2020-06-29
   - SPVM need manually initialization in Perl script because SPVM is not compiled some environment require, do, Mojo morbo, Mojo hypnotoad, mod_perl, etc
